tests/baselines/reference/classConstructorAccessibility.errors.txt
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility.ts(20,9): error TS2655: Constructor of type '(x: number): D' is private and only accessible within class 'D'.
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility.ts(21,9): error TS2654: Constructor of type '(x: number): E' is protected and only accessible within class 'E' and its subclasses.
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility.ts(38,13): error TS2655: Constructor of type '(x: number): D<number>' is private and only accessible within class 'D<T>'.
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility.ts(39,13): error TS2654: Constructor of type '(x: number): E<number>' is protected and only accessible within class 'E<T>' and its subclasses.
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility.ts(46,1): error TS2322: Type 'typeof D' is not assignable to type 'new (x: number) => any'.
  Cannot assign a private constructor to a public constructor.
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility.ts(47,1): error TS2322: Type 'typeof E' is not assignable to type 'new (x: number) => any'.
  Cannot assign a protected constructor to a public constructor.


==== tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility.ts (6 errors) ====
    
    class B {
        constructor(public x: number) { }
    }
    
    class C {
        public constructor(public x: number) { }
    }
    
    class D {
        private constructor(public x: number) { }
    }
    
    class E {
        protected constructor(public x: number) { }
    }
    
    var b = new B(1);
    var c = new C(1);
    var d = new D(1); // error - D is private
            ~~~~~~~~
!!! error TS2655: Constructor of type '(x: number): D' is private and only accessible within class 'D'.
    var e = new E(1); // error - E is protected
            ~~~~~~~~
!!! error TS2654: Constructor of type '(x: number): E' is protected and only accessible within class 'E' and its subclasses.
    
    module Generic {
        class C<T> {
            public constructor(public x: T) { }
        }
    
        class D<T> {
            private constructor(public x: T) { }
        }
    
        class E<T> {
            protected constructor(public x: T) { }
        }
    
        var b = new B(1);
        var c = new C(1);
        var d = new D(1); // error - D is private
                ~~~~~~~~
!!! error TS2655: Constructor of type '(x: number): D<number>' is private and only accessible within class 'D<T>'.
        var e = new E(1); // error - E is protected
                ~~~~~~~~
!!! error TS2654: Constructor of type '(x: number): E<number>' is protected and only accessible within class 'E<T>' and its subclasses.
    }
    
    // make sure signatures are covered.
    let sig: new(x: number) => any;
    sig = B;
    sig = C;
    sig = D; // error - private to public
    ~~~
!!! error TS2322: Type 'typeof D' is not assignable to type 'new (x: number) => any'.
!!! error TS2322:   Cannot assign a private constructor to a public constructor.
    sig = E; // error - protected to public
    ~~~
!!! error TS2322: Type 'typeof E' is not assignable to type 'new (x: number) => any'.
!!! error TS2322:   Cannot assign a protected constructor to a public constructor.